force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Menu_Category__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>