force-app/main/default/objects/Menu_Item__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Image for tablet display</description>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>