force-app/main/default/objects/Menu_Item__c/fields/Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Item_Key__c</fullName>
    <externalId>true</externalId>
    <label>Item Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>